--- a/eCardly/style.css
+++ b/eCardly/style.css
@@ -1,6 +1,4 @@
-* {
-  border: 1px solid gold;
-}
+
 h2 {
   font-size: 20px;
   margin: 10px 0px;
@@ -32,7 +30,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content:center;
-  margin: auto;
+  margin: 20px;
 }
 #left{
   display: flex;
